# Tesseract-Vault

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Claude.md  DEPLOYMENT.md  GOVERNANCE.md  Prusti.toml  ROADMAP.md  SECURITY.md  VERIFYING_SIGNATURES.md  WASM_BUNDLE_SIZE_REPORT.md  WASM_OPTIMIZATION.md  WHITE_PAPER.md  build-wasm-optimized.bat  build.rs  codecov.yml  deny.toml  mutants.toml  readme.md  review.md  rust-toolchain.toml  why3find.json
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.cargo/: config.toml
.chainlink/: issues.db
.chainlink/rules/: project.md
.claude/: settings.local.json
.claude/hooks/: work-check.py
.clusterfuzzlite/: Dockerfile  build.sh
.github/codeql/: codeql-config.yml
.github/workflows/: cargo-deny.yml  cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  codeql.yml  coverage.yml  creusot.yml  dco.yml  differential-testing.yml  dudect.yml  formal-verification.yml  fuzz.yml  kani.yml  lint.yml  loom.yml  miri.yml  nist-cavp.yml  proptest.yml  prusti.yml  release.yml  security-audit.yml  wycheproof.yml
aes-gcm-fork/aes-gcm/: Cargo.toml
aes-gcm-fork/aes-gcm/src/: lib.rs
benches/: allocator_benchmark.rs  constant_time.rs  memory_pool_benchmark.rs  pqc_benchmark.rs  streaming_benchmark.rs
docker/tpm-test/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  ASSURANCE_CASE.md  MEMORY_SCRUBBING.md  REMOTE_WIPE_PROTOCOL.md  SSD_SECURE_DELETION.md  TPM_INTEGRATION.md  VERIFICATION_SETUP_MANUAL.md  advanced-verification.md  formal-specifications.md  formal-verification-setup.md  formal-verification-tools-analysis.md  pqc-research.md
examples/wasm/: README.md  basic-example.html  demo.html  index.html  remote-wipe.html  worker-example.html  worker-pool.js  worker.js
fuzz/: Cargo.toml  README.md  rustc-ice-2025-12-31T19_23_23-87685.txt  rustc-ice-2025-12-31T19_24_16-87825.txt
fuzz/fuzz_targets/: fuzz_aes_gcm_decrypt.rs  fuzz_bitmap.rs  fuzz_chunk_mapper.rs  fuzz_dir_entry.rs  fuzz_inode.rs  fuzz_keyslots.rs  fuzz_pq_metadata.rs  fuzz_stream_header.rs  fuzz_superblock.rs  fuzz_volume_header.rs
gui/: package-lock.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: src__validation.rs_line_108_col_48.diff  src__validation.rs_line_111_col_29.diff  src__validation.rs_line_111_col_51.diff  src__validation.rs_line_113_col_25.diff  src__validation.rs_line_113_col_25_001.diff  src__validation.rs_line_41_col_5.diff  src__validation.rs_line_41_col_5_001.diff  src__validation.rs_line_41_col_5_002.diff  src__validation.rs_line_41_col_5_003.diff  src__validation.rs_line_41_col_5_004.diff  src__validation.rs_line_41_col_5_005.diff  src__validation.rs_line_51_col_8.diff  src__validation.rs_line_67_col_5.diff  src__validation.rs_line_67_col_5_001.diff  src__validation.rs_line_67_col_5_002.diff  src__validation.rs_line_67_col_5_003.diff  src__validation.rs_line_67_col_5_004.diff  src__validation.rs_line_67_col_5_005.diff  src__validation.rs_line_98_col_23.diff  src__validation.rs_line_98_col_23_001.diff  src__validation.rs_line_98_col_23_002.diff  src__validation.rs_line_98_col_5.diff
mutants.out/diff/: src__validation.rs_line_111_col_71.diff  src__validation.rs_line_41_col_5.diff
rustcrypto-block-modes-fork/ctr/: Cargo.toml
rustcrypto-block-modes-fork/ctr/src/: backend.rs  flavors.rs
rustcrypto-block-modes-fork/ctr/src/flavors/: ctr128.rs  (+2 more)
rustcrypto-hashes-fork/blake2/: Cargo.toml
rustcrypto-hashes-fork/blake2/src/: macros.rs
rustcrypto-traits-fork/aead/: Cargo.toml
rustcrypto-traits-fork/aead/src/: lib.rs  stream.rs
rustcrypto-traits-fork/cipher/: Cargo.toml
rustcrypto-traits-fork/cipher/src/: block.rs  lib.rs  stream_core.rs
rustcrypto-traits-fork/crypto-common/: Cargo.toml
rustcrypto-traits-fork/crypto-common/src/: lib.rs
rustcrypto-traits-fork/digest/: Cargo.toml
rustcrypto-traits-fork/universal-hash/src/: lib.rs
rustcrypto-utils-fork/block-buffer/: Cargo.toml
rustcrypto-utils-fork/block-buffer/src/: lib.rs  sealed.rs
rustcrypto-utils-fork/inout/: Cargo.toml
rustcrypto-utils-fork/inout/src/: inout.rs  inout_buf.rs  reserved.rs
security-reports/: security_report_20260105_155058.md  security_report_20260105_173821.md  security_report_20260105_182521.md  security_report_20260105_203726.md  security_report_20260105_231420.md
src/: config.rs  config_kani.rs  error.rs  lib.rs  main.rs  progress.rs  validation.rs
src/crypto/: aes_gcm.rs  aes_gcm_kani.rs  hardware.rs  kdf.rs  kdf_kani.rs  keyfile.rs  mod.rs  pqc.rs  pqc_tests.rs  signatures.rs  streaming.rs  streaming_kani.rs
src/daemon/: auth.rs  auth_kani.rs  client.rs  loom_tests.rs  mod.rs  protocol.rs  protocol_kani.rs  server.rs
src/daemon/service/: linux.rs  macos.rs  mod.rs  windows.rs
src/hsm/: mod.rs  tpm.rs  tpm_utils.rs  yubikey.rs  yubikey_stub.rs
src/luks/: keyfile.rs  mod.rs
src/memory/: allocator.rs  debugger.rs  dump_protection.rs  guard.rs  loom_tests.rs  memory_kani.rs  mod.rs  pool.rs  scrub.rs  secret.rs  tme.rs
src/metadata/: mod.rs  padding.rs  sanitizer.rs
src/power/: linux.rs  loom_tests.rs  mod.rs  windows.rs
src/storage/: mod.rs
src/volume/: automount.rs  chunk.rs  cloud_sync.rs  container.rs  dropbox_client.rs  filesystem.rs  format.rs  header.rs  header_kani.rs  io.rs  keyslot.rs  keyslot_kani.rs  loom_tests.rs  manager.rs  migration.rs  mod.rs  operations.rs  remote_wipe.rs  s3_client.rs  sector.rs  volumeio_fs.rs
src/volume/mount/: fuse.rs  mod.rs  winfsp.rs  winfsp_utils.rs
src/wasm/: bindings.rs  mod.rs  security.rs
supply-chain/: config.toml
tests/: differential_tests.proptest-regressions  differential_tests.rs  nist_cavp_tests.rs  nist_pqc_tests.rs  proptest_encryption.rs  volume_integration_tests.rs  winfsp_integration.rs  wycheproof_tests.rs
(+1 files in other folders)
