[package]
name = "secure-cryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
# CHANGED: Explicitly add rand_core for RngCore trait
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.4"
rpassword = "7.3"
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0.56"
subtle = "2.5.0"
zeroize = { version = "1.7", features = ["derive"] }
tempfile = "3.10"
