[package]
name = "tesseract-vault"
version = "1.5.0"
edition = "2021"
license = "MIT"
description = "Tesseract Vault - Advanced encryption suite with post-quantum cryptography"
repository = "https://github.com/dollspace-gay/Tesseract"
keywords = ["encryption", "cryptography", "aes-gcm", "argon2", "security"]
categories = ["cryptography"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory"]

[features]
default = ["post-quantum", "compression", "ctrlc", "yubikey", "encrypted-volumes", "gui"]
encrypted-volumes = ["dep:fuser", "dep:winfsp"]  # Requires LLVM/Clang for WinFSP bindings
cloud-storage = ["dep:reqwest"]  # S3, Dropbox, and other cloud backends
ctrlc = ["dep:ctrlc"]

# WASM build profiles
wasm-minimal = []  # Only AES-256-GCM + Argon2id (smallest)
wasm-full = ["post-quantum", "compression"]  # All features (default)

# Individual feature flags
post-quantum = ["dep:ml-kem", "dep:ml-dsa", "dep:rand09", "dep:chacha20"]  # Include ML-KEM-1024 and ML-DSA post-quantum cryptography
compression = ["dep:flate2"]  # Include DEFLATE compression support

# Hardware Security Module support
yubikey = ["dep:yubikey-hmac-otp"]  # YubiKey HMAC-SHA1 challenge-response

# GUI support (eframe, image, etc.) - disabled for Kani verification due to rav1e nightly conflicts
gui = ["dep:eframe", "dep:rfd", "dep:notify-rust", "dep:tray-icon", "dep:image", "dep:qrcode"]

# Loom concurrency testing (dev-only)
loom = []

[lib]
name = "tesseract_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tesseract-vault"
path = "src/main.rs"

[[bin]]
name = "tesseract-vault-gui"
path = "src/bin/gui/main.rs"
required-features = ["gui"]

[[bin]]
name = "tesseract-vault-register"
path = "src/bin/register/mod.rs"

[[bin]]
name = "tesseract_luks"
path = "src/bin/tesseract_luks.rs"
required-features = ["post-quantum", "compression"]

[[bin]]
name = "tesseract-vault-daemon"
path = "src/bin/daemon.rs"
required-features = ["encrypted-volumes"]

[dependencies]
aes-gcm = "0.11.0-rc.2"
xts-mode = "0.5"
aes = "0.8"
argon2 = "0.6.0-rc.2"
generic-array = { version = "1.1", features = ["compat-0_14"] }
rand = { version = "0.10.0-rc.5", features = ["std", "os_rng"] }
rand_core = "0.10.0-rc-2"
# rand 0.9 for ML-KEM compatibility (ml-kem uses rand_core 0.9)
rand09 = { package = "rand", version = "0.9.2", optional = true }
ml-kem = { version = "0.3.0-pre.2", optional = true }
ml-dsa = { version = "0.1.0-rc.2", features = ["zeroize"], optional = true }
chacha20 = { version = "0.10.0-rc.5", optional = true }
blake3 = "1.5"
thiserror = "1.0"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
rayon = "1.10"
flate2 = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
lru = "0.16"
serde-big-array = "0.5"
hex = "0.4"
base64 = "0.22"

# Memory protection
libc = "0.2"

# Hybrid PQC key derivation (used on all platforms)
hkdf = "0.11"
sha2 = "0.9"

# WebAssembly support
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["Window", "Crypto"] }
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Native (non-WASM) dependencies for binaries and platform-specific features
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rpassword = "7.4"
zxcvbn = "3"  # Password strength estimation (entropy-based)
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.23"
# Tokio with networking for cloud storage
tokio = { version = "1", features = ["fs", "sync", "rt", "rt-multi-thread", "macros", "time", "net", "io-util"] }
dirs = "5.0"
# HTTP client for cloud storage backends (rustls for security, no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }

# GUI dependencies (optional - disabled for Kani due to rav1e nightly conflicts)
eframe = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
notify-rust = { version = "4.11", optional = true }
tray-icon = { version = "0.21", optional = true }
image = { version = "0.25", optional = true }
qrcode = { version = "0.14", optional = true }

# Hardware Security Module support
yubikey-hmac-otp = { version = "0.10", optional = true }

# Cross-platform optional dependencies
ctrlc = { version = "3.4", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt", "debugapi", "processthreadsapi", "winbase", "winuser"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Power", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
windows-service = "0.7"
winreg = "0.52"
winfsp = { version = "0.12", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.16", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
quickcheck = "1.0"
wasm-bindgen-test = "0.3"
prusti-contracts = "0.2"
serde_json = "1.0"
hex = "0.4"
dudect-bencher = "0.6"
loom = "0.7"

# Kani only works on Unix systems (Linux/macOS), not Windows
[target.'cfg(unix)'.dev-dependencies]
kani-verifier = "0.66"

[[bench]]
name = "streaming_benchmark"
harness = false

[[bench]]
name = "memory_pool_benchmark"
harness = false

[[bench]]
name = "allocator_benchmark"
harness = false

[[bench]]
name = "pqc_benchmark"
harness = false

[[bench]]
name = "constant_time"
harness = false

[profile.release]
opt-level = "z"  # Optimize for size
lto = true  # Link-time optimization for better dead code elimination
codegen-units = 1  # Better optimization at cost of longer build time
strip = true  # Strip symbols
panic = "abort"  # Smaller panic handler

[profile.release-perf]
inherits = "release"
opt-level = 3  # Optimize for performance
lto = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(loom)'] }

