[package]
name = "aes-gcm"
version = "0.10.3"
description = """
Pure Rust implementation of the AES-GCM (Galois/Counter Mode)
Authenticated Encryption with Associated Data (AEAD) Cipher
with optional architecture-specific hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/aes-gcm"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
categories = ["cryptography", "no-std"]
rust-version = "1.56"

[dependencies]
aead = { path = "../../rustcrypto-traits-fork/aead", default-features = false }
aes = { version = "0.8", optional = true }
cipher = { path = "../../rustcrypto-traits-fork/cipher" }
ctr = "0.9"
ghash = { version = "0.5", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }
generic-array = { version = "1.1", features = ["compat-0_14"] }

[dev-dependencies]
aead = { path = "../../rustcrypto-traits-fork/aead", features = ["dev"], default-features = false }
hex-literal = "0.3"

[features]
default   = ["aes", "alloc", "getrandom"]
std       = ["aead/std", "alloc"]
alloc     = ["aead/alloc"]
arrayvec  = ["aead/arrayvec"]
getrandom = ["aead/getrandom", "rand_core"]
heapless  = ["aead/heapless"]
rand_core = ["aead/rand_core"]
stream    = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
